[package]
name = "leetcode-submissions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leetcode"
path = "leetcode/lib.rs"

[[bin]]
name = "0101_dfs"
path = "0101/dfs.rs"

[[bin]]
name = "0496_stack"
path = "0496/stack.rs"

[dependencies]
